# gnome-recorder-admin

./: Makefile  README.md  main.c  menu.ui  meson.build  screen-count.c  screen-count.h  screen-save.h  screen-stop.c  screen-style.c  screen-window.c  step
data/: gnome-recorder-admin.appdata.xml.in  gnome-recorder-admin.desktop.in  meson.build  screen-admin.appdata.xml.in  screen-admin.desktop.in
data/counter/: meson.build
data/hicolor/: meson.build
data/icon/: meson.build
po/: POTFILES.in  gnome-recorder-admin.pot  screen-admin.pot  zh_CN.mo  zh_CN.po
src/: main.c  meson.build  screen-area.c  screen-area.h  screen-count.c  screen-count.h  screen-save.c  screen-save.h  screen-stop.c  screen-stop.h  screen-style.c  screen-style.h  screen-window.c  screen-window.h
